--- a/searchapp/static/css/style.css
+++ b/searchapp/static/css/style.css
@@ -93,11 +93,21 @@ h1 {
 .bar {
     display: flex;
     justify-content: center;
+}
 
+.form_holder{
+    display:flex;
+    flex: 1, 2;
+    align-items: center;
+    justify-content: center;
+}
+
+.upload-form, .search-form{
+    margin: 0 10px;
 }
 
 .search-bar {
-    width: 50%;
+    width: 60%;
     height: 40px;
     padding: 0 10px;
     border-radius: 50px;
@@ -105,7 +115,6 @@ h1 {
     outline: none;
     font-size: 16px;
     box-sizing: border-box;
-
 }
 
 .search-button {
@@ -140,6 +149,7 @@ h1 {
 }
 
 .upload-button {
+    height: 40px;
     background: #007BFF;
     margin-right: 10px;
     border: 2px;
