--- a/searchapp/templates/searchapp/index.html
+++ b/searchapp/templates/searchapp/index.html
@@ -1,28 +1,65 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script defer src="{% static 'js/script.js' %}"></script>
     <title>Search</title>
 </head>
 <body>
     <h1>SEARCH</h1>
-    <form action="/search" method="get" class="bar" novalidate>
-        <input type="file" id="fileInput" style="display: none;" multiple />
-        <button id="browseButton" class="upload-button"><i class="fas fa-upload"></i> Upload File</button>
-        <input type="text" name="query" placeholder="Search..." class="search-bar">
-        <button type="submit" class="search-button"><i class="fas fa-search"></i> Search</button>
-    </form>
+    <div class="form_holder">
+
+        <form  method="post" class="bar upload-form" enctype="multipart/form-data" novalidate>{% csrf_token %}
+            <div>
+                <input type="file" id="fileInput" style="display: none;" name="files" multiple/>
+                <button type="submit" id="browseButton" class="upload-button"><i class="fas fa-upload"></i> Upload File</button>
+            </div>
+        </form>
+
+        <form action="/search/" class="search-form" method="post"> {% csrf_token %}
+            <div>
+                <input type="text" name="query" placeholder="Search..." class="search-bar">
+                <button type="submit" class="search-button"><i class="fas fa-search"></i> Search</button>
+            </div>
+        </form>
+
+    </div>
     <div id="fileCardContainer" class="file-card-container"></div>
+
     <div id="fileCardTemplate" class="file-card" style="display: none;">
         <h2>Filename</h2>
         <p>File details (optional)</p>
     </div>
-    <script src="script.js"></script>
+
+    <script>
+        $('#uploadForm').on('submit', function(event) {
+            event.preventDefault();
+            
+            var formData = new FormData(this);
+
+            $.ajax({
+                url: '/upload/',
+                type: 'POST',
+                data: formData,
+                processData: false,
+                contentType: false,
+                success: function(response) {
+                    console.log('Files uploaded successfully');
+                },
+                error: function(response) {
+                    console.error('An error occurred while uploading files.');
+                }
+            });
+        });
+    </script>
 </body>
 </html>
